# spead2

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  Dockerfile.CI  Jenkinsfile  MANIFEST.in  Makefile.am  README.rst  RELEASE-PROCESS  TODO  bootstrap.sh  configure.ac  meson.build  meson.options  mkwheels.sh  mypy.ini  pyproject.toml  pytest.ini  python-build.cfg.in  requirements-3.12.txt  requirements-3.13.txt  requirements-3.6.txt  requirements-readthedocs.in  requirements-readthedocs.txt  requirements.in  requirements.txt  setup.cfg  setup.py  spead2.pc.in  travis-install.sh  travis-script.sh
.ci/: .Dockerfile.swp  Dockerfile  all-builds.sh  before_all_linux.sh  before_all_macos.sh  ccache-path.sh  configure.sh  coverage.sh  cxx-tests.sh  dummy-device.sh  install-py-venv.sh  install-sys-pkgs.sh  py-build-requirements.sh  py-requirements.sh  py-tests-jenkins.sh  py-tests-shutdown.sh  py-tests.sh  setup-flags.sh
.github/: dependabot.yml
.github/workflows/: test.yml
.travis/: coverage.sh  install.sh  script.sh
doc/: .gitignore  Doxyfile  Makefile  advanced.rst  changelog.rst  conf.py  cpp-asio.rst  cpp-ibverbs.rst  cpp-inproc.rst  cpp-logging.rst  cpp-netmap.rst  cpp-recv-chunk-group.rst  cpp-recv-chunk.rst  cpp-recv.rst  cpp-send.rst  cpp-stability.rst  cpp.rst  dev-debug.rst  dev-ibverbs-linking.rst  dev-layout.rst  dev-py-binding.rst  dev-recv-chunk-group.rst  dev-recv-destruction.rst  dev-recv-locking.rst  dev-release.rst  dev-send-gso.rst  dev-send-rate-limit.rst  dev-setup.rst  developer.rst  index.rst  installation.rst  introduction.rst  license.rst  migrate-3.rst  migrate-4.rst  perf.rst  py-bug-compat.rst  py-flavour.rst  py-ibverbs.rst  py-inproc.rst  (+41 more)
doc/_static/: wrap_table.css
doc/tutorial/: tut-1-spead-intro.rst  tut-10-send-reuse-heaps-before.txt  tut-10-send-reuse-heaps-plot.py  tut-10-send-reuse-heaps.rst  tut-11-send-batch-heaps-after.txt  tut-11-send-batch-heaps-mid.txt  tut-11-send-batch-heaps.rst  (+12 more)
examples/: Makefile.am  gdrapi_example.cpp  gdrapi_example.cu  gpudirect_example.cu  meson.build  recv_chunk_example.cpp  recv_chunk_group_example.cpp  recv_chunk_group_example.py  recv_chunk_ring_example.cpp  recv_chunk_ring_example.py  recv_example.cpp  recv_example.py  send_example.cpp  test_recv.cpp  test_recv.py  test_ringbuffer.cpp  test_send.cpp  test_send.py  test_send_asyncio.py  test_send_trollius.py  tut_10_send_reuse_heaps.cpp  tut_10_send_reuse_heaps.py  tut_11_send_batch_heaps.cpp  tut_11_send_batch_heaps.py  tut_12_recv_chunks.cpp  tut_4_send_perf.cpp  tut_4_send_perf.py  tut_4_send_pipeline.cpp  tut_4_send_pipeline.py  tut_5_send_pipeline.cpp  tut_5_send_pipeline.py  tut_5_send_pktsize.cpp  tut_5_send_pktsize.py  tut_6_recv_power.cpp  tut_6_recv_power.py  tut_6_send_pktsize.cpp  tut_6_send_pktsize.py  tut_7_recv_power.cpp  tut_7_send.cpp  tut_7_send.py  (+12 more)
examples/tutorial/: meson.build  tut_10_send_reuse_heaps.cpp  tut_10_send_reuse_heaps.py  tut_11_send_batch_heaps.cpp  tut_11_send_batch_heaps.py  tut_12_recv_chunks.cpp  tut_12_recv_chunks.py  tut_2_send.cpp  tut_2_send.py  tut_3_recv.cpp  tut_3_recv.py  tut_4_send_perf.cpp  tut_4_send_perf.py  tut_5_send_pipeline.cpp  tut_5_send_pipeline.py  tut_6_send_pktsize.cpp  tut_6_send_pktsize.py  tut_7_recv_power.cpp  tut_8_send_reuse_memory.cpp  tut_8_send_reuse_memory.py  tut_9_recv_memory_pool.cpp  tut_9_recv_memory_pool.py
include/: Makefile.am
include/spead2/: .gitignore  common_bind.h  common_defines.h  common_endian.h  common_features.h.in  common_flavour.h  common_ibv.h  common_ibv_loader_utils.h  common_inproc.h  common_loader_utils.h  common_logging.h  common_memcpy.h  common_memory_allocator.h  common_memory_pool.h  common_raw_packet.h  common_ringbuffer.h  common_semaphore.h  common_socket.h  common_storage.h  common_thread_pool.h  common_unbounded_queue.h  meson.build  portable_endian.h  py_common.h  py_recv.h  py_send.h  recv_chunk_stream.h  recv_chunk_stream_group.h  recv_heap.h  recv_inproc.h  recv_live_heap.h  recv_mem.h  recv_netmap.h  recv_packet.h  recv_reader.h  recv_ring_stream.h  recv_stream.h  recv_tcp.h  recv_udp.h  recv_udp_base.h  (+16 more)
m4/: spead2_arg_with.m4  spead2_check_feature.m4  spead2_print_feature.m4
manylinux/: Dockerfile  before_all.sh  before_build.sh  generate_wheels.sh  install_requirements.sh
manylinux1/: Dockerfile  generate_wheels.sh  install_requirements.sh
scripts/: spead2_bench.py  spead2_recv.py  spead2_send.py
spead2/: .gitignore  __init__.py  __init__.pyi  _version.py  pyspead2.cpp
src/: .gitignore  Makefile  Makefile.am  Makefile.inc.am  common_defines.h  common_endian.h  common_features.h  common_features.h.in  common_flavour.cpp  common_flavour.h  common_ibv.cpp  common_ibv.h  common_ibv_loader_utils.cpp  common_inproc.cpp  common_loader_utils.cpp  common_logging.cpp  common_logging.h  common_mem_pool.cpp  common_mem_pool.h  common_memcpy.cpp  common_memcpy.h  common_memcpy_impl.h  common_memcpy_x86.h  common_memory_allocator.cpp  common_memory_allocator.h  common_memory_pool.cpp  common_memory_pool.h  common_mempool.cpp  common_mempool.h  common_raw_packet.cpp  common_raw_packet.h  common_ringbuffer.h  common_semaphore.cpp  common_semaphore.h  common_socket.cpp  common_thread_pool.cpp  common_thread_pool.h  common_unique.h  defines.h  in.cpp  (+98 more)
src/spead2/: __init__.py  __init__.pyi  meson.build  numba.py  numba.pyi
src/spead2/recv/: __init__.py  __init__.pyi  asyncio.py  asyncio.pyi  meson.build  numba.py  numba.pyi  stream_stat_indices.py  stream_stat_indices.pyi
src/spead2/send/: __init__.py  __init__.pyi  asyncio.py  asyncio.pyi  meson.build
src/spead2/tools/: bench_asyncio.py  cmdline.py  meson.build  recv_asyncio.py  send_asyncio.py
tests/: conftest.py  shutdown.py  spead2_bench.py  spead2_recv.py  spead2_send.py  test.py  test_common.py  test_passthrough.py  test_passthrough_asyncio.py  test_recv.py  test_recv_asyncio.py  test_recv_chunk_stream.py  test_recv_chunk_stream_group.py  test_recv_trollius.py  test_send.py  test_send_asyncio.py  test_send_trollius.py  test_trollius.py
(+29 files in other folders)
