[build-system]
requires = ["setuptools", "pybind11==2.11.1", "setuptools_scm==7.1.0"]

[tool.cibuildwheel]
build-frontend = "build"
before-all = "manylinux/before_all.sh {package}"
before-build = "manylinux/before_build.sh"
manylinux-x86_64-image="manylinux2014"
manylinux-i686-image="manylinux2014"
# The manylinux2014 AArch64 images don't provide cmake, so build 2_28 wheels instead
manylinux-aarch64-image="manylinux_2_28"
build = ["cp38-manylinux*", "cp39-manylinux*", "cp310-manylinux*", "cp311-manylinux*", "cp312-manylinux*"]

before-test = "pip install -r {package}/requirements.txt -r {package}/requirements-3.12.txt"
test-command = "pytest -v {package}/tests"

[tool.cibuildwheel.linux]
archs = ["aarch64", "x86_64"]

[tool.cibuildwheel.linux.environment]
CFLAGS = "-flto"
LDFLAGS = "-flto"

# ccache isn't available on all architectures, so only use it conditionally
[[tool.cibuildwheel.overrides]]
select = "*linux_x86_64"
[tool.cibuildwheel.overrides.environment]
CC = "ccache gcc"
CFLAGS = "-flto"
LDFLAGS = "-flto"

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 100
py_version = 38

[tool.black]
line-length = 100
target-versions = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
select = ["E", "F", "W", "UP", "RUF100"]
line-length = 100
target-version = "py38"

[tool.mypy]
ignore_missing_imports = true
files = ["src/spead2", "examples", "tests"]
python_version = "3.8"
